# aws-role-play

./: .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
aws_role_play/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  roles.py  sts.py
tests/: test_roles.py  test_sts.py
